# spec-driven-ai-coder

./: .env.example  .gitignore  README.md  main.py  mypy.ini  pyrightconfig.json  requirements.txt  resume.py
.github/workflows/: mypy.yml
.windsurf/rules/: prudent-new-feature.md
composer/audit/: db.py
composer/core/: context.py  validation.py
composer/diagnostics/: debug.py
composer/human/: handlers.py
composer/input/: parsing.py  types.py
composer/natreq/: extractor.py  judge.py
composer/prover/: solana_runner.py
composer/rag/: db.py
composer/templates/: req_extraction_prompt.j2  synthesis_prompt_solana.j2
composer/tools/: filesystem.py  human_tool.py  proposal.py  search.py  solana_prover.py  solana_tests.py
composer/workflow/: executor.py  factories.py  meta.py  types.py
examples/materialized_crypto_session_2f8508c2/: .session-id
examples/svm/materialized_trivial_addition/: Cargo.toml  checks.rs  terminal_logs_for_trivial_demo_with_formal_verification.txt
examples/svm/materialized_trivial_addition/src/: lib.rs
examples/svm/materialized_vault/: .session-id  Cargo.toml  terminal_logs_for_vault_demo.txt
examples/svm/materialized_vault/src/: certora.rs  lib.rs  processor.rs  state.rs
scripts/: gen_solana_docs.sh  init-db.sql  ragbuild_solana.py  setup_solana_rag.sh
stubs/: certoraRun.pyi
stubs/graphcore/: graph.pyi  utils.pyi
verisafe/: __main__.py  main.py
verisafe/audit/: db.py  types.py
verisafe/core/: context.py  state.py
verisafe/diagnostics/: debug.py  handlers.py  stream.py
verisafe/human/: handlers.py  types.py
(+26 files in other folders)
